# honeycomb2

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/doxygen/: Doxyfile
examples/: complete_example.cc
inc/honeycomb2/: alpha_s.hpp  cereal_extension.hpp  checksum.hpp  config_parser.hpp  default.hpp  discretization.hpp  foreign_interface.hpp  g2_weights.hpp  gauss_kronrod.hpp  honeycomb2.hpp  honeycomb2_c_api.h  kernel_functions.hpp  kernels.hpp  obs_weights.hpp  random_engine.hpp  runge_kutta.hpp  solution.hpp  thread_pool.hpp  timer.hpp  timing.hpp  utilities.hpp  version.hpp.in
inc/honeycomb2/Eigen/src/Core/util/: Meta.h
inc/honeycomb2/KernelFunctions/: Hhat12.hpp  discretized_kernel.hpp
inc/honeycomb2/cereal/: access.hpp  cereal.hpp
inc/honeycomb2/cereal/archives/: adapters.hpp  binary.hpp  json.hpp  portable_binary.hpp  xml.hpp
inc/honeycomb2/cereal/details/: helpers.hpp  polymorphic_impl.hpp  static_object.hpp  traits.hpp
inc/honeycomb2/cereal/types/: array.hpp  atomic.hpp  base_class.hpp  bitset.hpp  boost_variant.hpp  common.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  memory.hpp  optional.hpp  polymorphic.hpp  queue.hpp  set.hpp  stack.hpp  string.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  valarray.hpp  variant.hpp  vector.hpp
inc/honeycomb2/cereal/types/concepts/: pair_associative_container.hpp
scripts/: format.sh
src/: alpha_s.cc  checksum.cc  config_parser.cc  discretization.cc  evolution_operator.cc  foreign_interface.cc  g2_weights.cc  gauss_kronrod.cc  kernels.cc  models.cc  obs_weights.cc  random_engine.cc  rnc.cc  solution.cc  thread_pool.cc  utilities.cc
src/kernels/: DW.cc  Hd13.cc  He23P23.cc  Hhat12.cc  Hhat12GG.cc  Hhat13.cc  Hhat23.cc  Hhat23GG.cc  Hhat31GG.cc  Hminus12.cc  Hminus12GG.cc  Hminus13GG.cc  Hminus23.cc  Hplus12.cc  Hplus13.cc  Hplus23.cc  HplusSum12GG.cc  HplusSum13GG.cc  Htest.cc  Vminus13.cc  Vplus13.cc  Wminus13.cc  Wplus13.cc
tests/: CMakeLists.txt  S_to_T.cc  compare_g2.py  complete_example.cc  convolution_check.cc  d2.cc  evolution_compare.py  example.config  foobar.cc  g2.cc  get_points.py  honeycomb_120_25_grid_points.hpp  integration.cc  kern_discr.cc  monoDim.cc  monodimensional_check.cc  oneDim_kernel.cc  original_model_functions.hpp  read_conf.cc  test_S_to_T.cc  test_alpha_s.cc  test_complete_evolution.cc  test_config.hpp.in  test_d2.cc  test_evolution_operator.cc  test_foreign_interface.cc  test_g2.cc  test_kernels.cc  test_pim.cc  test_rd_LWFA_asymptotic.hpp  test_rd_LWFA_fitted.hpp  test_rd_T_and_DT_final_scale.hpp  test_rd_T_and_DT_initial_scale.hpp  test_rd_alpha_s.hpp  twodim_check.cc
